Modified a fix program

--- a/src/Makefile
+++ b/src/Makefile
@@ -5,15 +5,18 @@ LIBS    = -lm
 INCLUDE = -I/usr/local/include/ -I../include/
 MEMORY  = -fsanitize=address -fno-omit-frame-pointer
 DIST    = ../bin/
+BASE_O  = HSODEsolver.o ODEsolver.o pwlDuffing.o pwlDuffingMode.o 
 
 .PHONY: all clean
 
 all:
 	@echo "No target is set."
 
-pp: pp.o HSODEsolver.o ODEsolver.o pwlDuffing.o pwlDuffingMode.o
+pp: pp.o $(BASE_O)
 	$(CC) -o $(DIST)$@ $(OBJDIR)$^ $(LIBS)
-bf1: bf1.o HSODEsolver.o ODEsolver.o pwlDuffing.o pwlDuffingMode.o
+bf1: bf1.o $(BASE_O)
+	$(CC) -o $(DIST)$@ $(OBJDIR)$^ $(LIBS)
+fix: fix.o $(BASE_O)
 	$(CC) -o $(DIST)$@ $(OBJDIR)$^ $(LIBS)
 
 .cpp.o:
